[tool.poetry]
name = "tools-image"
version = "0.1.0"
description = "Tools for formatting/linting/etc."
authors = ["Gordon Greene"]
license = "MIT"
readme = "README.md"
packages = [{include = "tools_image"}]

[tool.poetry.dependencies]
python = "^3.11"
mdformat = "^0.7.17"
mdformat-gfm = "^0.3.6"
mdformat-frontmatter = "^2.0.8"
mdformat-footnote = "^0.1.1"
autopep8 = "^2.0.4"
isort = "^5.13.2"
pytest-stub = "^1.1.0"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
pytype = "^2024.1.24"
pylint = "^3.0.3"
pylint-pytest = "^1.1.7"
ruff = "^0.5.6"
cmake-format = "^0.6.13"
cmakelint = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
