[tool.poetry]
name = "tools-image"
version = "0.1.0"
description = "Tools for formatting/linting/etc."
authors = ["Gordon Greene"]
license = "MIT"
readme = "README.md"
packages = [{include = "tools_image"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mdformat = "^0.7.17"
mdformat-gfm = "^0.3.6"
mdformat-frontmatter = "^2.0.8"
mdformat-footnote = "^0.1.1"
autopep8 = "^2.3.1"
isort = "^5.13.2"
mypy = "^1.11.2"
mypy-extensions = "^1.0.0"
pylint-pytest = "^1.1.8"
pylint-celery = "^0.3"
pylint-common = "^0.2.5"
pylint-flask = "^0.6"
pylint-plugin-utils = "^0.8.2"
coincidence = "^0.6.6"
pytest-asyncio = "^0.24.0"
pytest-bdd = "^7.3.0"
pytest-click = "^1.1.0"
pytest-django = "^4.9.0"
pytest-djangoapp = "^1.2.0"
pytest-flask = "^1.3.0"
pytest-httpserver = "^1.1.0"
pytest-instafail = "^0.5.0"
pytest-lazy-fixture = "^0.6.3"
pytest-localserver = "^0.9.0"
pytest-mock = "^3.14.0"
pytest-mpl = "^0.17.0"
pytest-multihost = "^3.4"
pytest-openfiles = "^0.6.0"
pytest-order = "^1.3.0"
pytest-pep8 = "^1.0.6"
pytest-pylint = "^0.21.0"
pytest-recording = "^0.13.2"
pytest-runner = "^6.0.1"
pytest-services = "^2.2.1"
pytest-skip-markers = "^1.5.2"
pytest-sourceorder = "^0.6.0"
pytest-tempdir = "^2019.10.12"
pytest-timeout = "^2.3.1"
pytest-toolbox = "^0.4"
pytest-xprocess = "^1.0.2"
cmake-format = "^0.6.13"
cmakelint = "^1.4.3"
ruff = "^0.6.8"
pytype = "^2024.9.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
